--- a/index.html
+++ b/index.html
@@ -8,50 +8,56 @@
 </head>
 
 <body>
-
-    <div class="border">
-        <div class="care wecare">
-            <div class="caree">WE CARE FOR <span id="your-dog">YOUR DOG</span>
-            </div>
-            <div id="we-always">We always try to provide your dog the best
-                services.</div>
+    <div class="nav-bar">
+        <div class="dogger">
+            Dogger<span id="dot">.</span>
         </div>
-        <div class="care dog-img">
-            <div class="dogg">
+        <div class="home">
+            <div class="hh Home">Home</div>
+            <input type="checkbox" id="on">
+            <label class="hh about" for="on">About&nbsp;<i class="fa-solid fa-angle-down"></i>
 
-            </div>
+                <div class="trade">
+                    <ul>
+                        <li>Trainers</li>
+                        <li>Pricing</li>
+                        <li>FQA</li>
+                        <li>Testimonals</li>
+                        <li>Gallery</li>
+                        <li>Blog</li>
+                        <li>More links</li>
+                    </ul>
+                </div>
+            </label>
+            <div class="hh trainer">Trainers</div>
+            <div class="hh service">Service</div>
+            <div class="hh contact">Contact</div>
         </div>
-
-
-
-        <div class="nav-bar">
-            <div class="dogger">Dogger&nbsp;<span class="dot">.</span></div>
-            <div class="home">
-                <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Trainers</li>
-                    <li>Services</li>
-                    <li>Contact</li>
-                </ul>
-            </div>
-            <div class="bar"><span><i class="fa-solid fa-bars"></i></span></div>
-        </div>
+        <div class="menu"><span><i class="fa-solid fa-bars"></i></span></div>
 
     </div>
 
+
+    <!-- border -->
+    <div class="border">
+        <div class="wecare">
+            <h1>WE&nbsp;CARE&nbsp;FOR
+                YOUR&nbsp;DOG</h1>
+            <p>We&nbsp;always&nbsp;try&nbsp;to&nbsp;provide&nbsp;your&nbsp;dog the best
+                services.</p>
+        </div>
+        <div class="dog-img"></div>
+    </div>
+
+    <!-- welcome -->
 
     <div class="welcome">
-        <div class="po">
-            <div class="poww pow"><span class="left-pow"><i class="fa-solid fa-paw"></i></span><i
-                    class="fa-solid fa-paw"></i><span class="right-pow"><i class="fa-solid fa-paw"></i></span></div>
-            <div class="poww welcome-to">WELCOME TO DOGGER PET CARE</div>
-            <div class="poww Far">Far far away, behind the word mountains, far from the countries Vokalia and
-                Consonantia,
-                there live the blind texts.</div>
-        </div>
+
 
     </div>
+
+
+
 
 
 
