--- a/index.html
+++ b/index.html
@@ -52,11 +52,57 @@
     <!-- welcome -->
 
     <div class="welcome">
+        <div class="well">
+            <div class="paw"><span class="left-paw"><i class="fa-solid fa-paw"></i></span>&nbsp;<i
+                    class="fa-solid fa-paw"></i>&nbsp;<span class="right-paw"><i class="fa-solid fa-paw"></i></span>
+            </div>
+            <div class="welcome-to">WELCOME TO DOGGER PET CARE</div>
+            <div class="far">Far far away, behind the word mountains, far from the countries Vokalia and
+                Consonantia, there live the blind texts.</div>
 
-
+        </div>
     </div>
 
+    <!-- love & care -->
 
+    <div class="love">
+        <div class="love-border">
+            <div class="ll love-care">
+                <div class="care">Love & Care</div>
+                <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
+                    right at the coast of the Semantics, a
+                    large language ocean.</div>
+                <div class="readme">Read More</div>
+
+            </div>
+            <div class="ll nurse-doctor">
+                <div class="nurse-img"></div>
+
+            </div>
+            <div class="ll fearsome-dog">
+                <div class="fear-dog-img"></div>
+            </div>
+            <div class="ll fearsome">
+                <div class="care">Fearsome</div>
+                <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
+                    right at the coast of the Semantics, a
+                    large language ocean.</div>
+                <div class="readme">Read More</div>
+            </div>
+            <div class="ll beautiful">
+                <div class="care">Beautiful</div>
+                <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
+                    right at the coast of the Semantics, a
+                    large language ocean.</div>
+                <div class="readme">Read More</div>
+            </div>
+            <div class="ll beautiful-dog">
+                <div class="beautiful-dog-img"></div>
+            </div>
+
+        </div>
+
+    </div>
 
 
 
