--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
     <!-- border -->
     <div class="border">
-        <div class="wecare">
+        <div class="wee wecare">
             <h1>WE&nbsp;CARE&nbsp;FOR
                 YOUR&nbsp;DOG</h1>
             <p>We&nbsp;always&nbsp;try&nbsp;to&nbsp;provide&nbsp;your&nbsp;dog the best
                 services.</p>
         </div>
-        <div class="dog-img"></div>
+        <div class="wee dog-img"></div>
     </div>
 
     <!-- welcome -->
