--- a/index.html
+++ b/index.html
@@ -106,7 +106,34 @@
 
 
 
+    <!-- about us -->
 
+    <div class="about-us">
+        <div class="aboutt us">
+            <div class="uss">
+                <div class="pow"><i class="fa-solid fa-paw"></i>&nbsp;<span><i
+                            class="fa-solid fa-paw"></i></span>&nbsp;<i class="fa-solid fa-paw"></i>
+                </div>
+                <div class="aboutt-us">ABOUT US</div>
+                <div class="separate">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
+                    language ocean.</div>
+                <div class="small">A small river named Duden flows by their place and supplies it with the necessary
+                    regelialia. It is a paradisematic
+                    country, in which roasted parts of sentences fly into your mouth.</div>
+                <div class="small-river">
+                    <ul>
+                        <li><i class="fa-solid fa-paw"></i>&nbsp;&nbsp;A small river named Duden flows</li>
+                        <li><i class="fa-solid fa-paw"></i>&nbsp;&nbsp;It is a paradisematic country</li>
+                        <li><i class="fa-solid fa-paw"></i>&nbsp;&nbsp;Roasted parts of sentences fly</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="aboutt dog-vide">
+            <div class="dogg-video"></div>
+        </div>
+
+    </div>
 
 
 
