--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
             <p>We&nbsp;always&nbsp;try&nbsp;to&nbsp;provide&nbsp;your&nbsp;dog the best
                 services.</p>
         </div>
-        <div class="wee dog-img"></div>
+        <div class="wee dog-img">
+            <div class="blackky-dog">
+                <!-- <image src="./src/dogger_img_1.png"></image> -->
+            </div>
+        </div>
     </div>
 
     <!-- welcome -->
