--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     class="fa-solid fa-paw"></i>&nbsp;<span class="right-paw"><i class="fa-solid fa-paw"></i></span>
             </div>
             <div class="welcome-to">WELCOME TO DOGGER PET CARE</div>
-            <div class="far">Far far away, behind the word mountains, far from the countries Vokalia and
+            <div class="farr">Far far away, behind the word mountains, far from the countries Vokalia and
                 Consonantia, there live the blind texts.</div>
 
         </div>
