--- a/index.html
+++ b/index.html
@@ -139,10 +139,35 @@
 
     </div>
 
+    <!-- our Trainer -->
 
+    <div class="ourtrainer">
 
+        <div class="ourr">
+            <div class="our-trainer">
+                <p class="pow"><i class="fa-solid fa-paw"></i>&nbsp;<span><i class="fa-solid fa-paw"></i></span>&nbsp;<i
+                        class="fa-solid fa-paw"></i>
+                </p>
+                <p>OUR TRAINERS</p>
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+                    the blind texts.</p>
+            </div>
+        </div>
+    </div>
 
+    <!-- jesica -->
 
+    <div class="jesi">
+        <div class="pictures">
+            <div class="pics pic1">
+                <div class="top"></div>
+                <div class="bottom"></div>
+            </div>
+            <div class="pics pic2"></div>
+            <div class="pics pic3"></div>
+        </div>
+
+    </div>
 </body>
 
 </html>
