--- a/index.html
+++ b/index.html
@@ -158,15 +158,9 @@
     <!-- jesica -->
 
     <div class="jesi">
-        <div class="pictures">
-            <div class="pics pic1">
-                <div class="top"></div>
-                <div class="bottom"></div>
-            </div>
-            <div class="pics pic2"></div>
-            <div class="pics pic3"></div>
-        </div>
-
+        <div class="pics"></div>
+        <div class="pics"></div>
+        <div class="pics"></div>
     </div>
 </body>
 
