--- a/index.html
+++ b/index.html
@@ -158,9 +158,41 @@
     <!-- jesica -->
 
     <div class="jesi">
-        <div class="pics"></div>
-        <div class="pics"></div>
-        <div class="pics"></div>
+        <div class="pictures">
+            <div class="pics">
+                <div class="img"></div>
+                <div class="jesica">
+                    <p>Jessica White</p>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
+                        live the blind texts.</p>
+                    <p><span><i class="fa-brands fa-twitter"></i></span><span><i
+                                class="fa-brands fa-instagram"></i></span><span><i
+                                class="fa-brands fa-facebook-f"></i></span></p>
+                </div>
+            </div>
+            <div class="pics">
+                <div class="img"></div>
+                <div class="jesica">
+                    <p>Valerie Elash</p>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
+                        live the blind texts.</p>
+                    <p><span><i class="fa-brands fa-twitter"></i></span><span><i
+                                class="fa-brands fa-instagram"></i></span><span><i
+                                class="fa-brands fa-facebook-f"></i></span></p>
+                </div>
+            </div>
+            <div class="pics">
+                <div class="img"></div>
+                <div class="jesica">
+                    <p>Alicia Jones</p>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
+                        live the blind texts.</p>
+                    <p><span><i class="fa-brands fa-twitter"></i></span><span><i
+                                class="fa-brands fa-instagram"></i></span><span><i
+                                class="fa-brands fa-facebook-f"></i></span></p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
