--- a/index.html
+++ b/index.html
@@ -194,6 +194,23 @@
             </div>
         </div>
     </div>
+
+    <!-- pricing-table -->
+
+    <div class="pricing">
+        <div class="table">
+
+            <p class="pow"><i class="fa-solid fa-paw"></i>&nbsp;<span><i class="fa-solid fa-paw"></i></span>&nbsp;<i
+                    class="fa-solid fa-paw"></i>
+            </p>
+            <p>PRICING TABLE</p>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
+                blind
+                texts.</p>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
