--- a/index.html
+++ b/index.html
@@ -210,6 +210,74 @@
         </div>
     </div>
 
+    <!-- Basic -->
+
+    <div class="basic">
+        <div class="basicc">
+            <div class="lef left">
+                <div class="bassi">
+                    <p>BASIC</p>
+                    <p>$47 / year</p>
+                    <ul>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Officia quaerat eaque neque</li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Possimus aut consequuntur incidunt
+                        </li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Lorem ipsum dolor sit amet</li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Consectetur adipisicing elit</li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Dolorum esse odio quas architecto
+                            sint
+                        </li>
+                    </ul>
+                    <p>Buy now</p>
+                </div>
+            </div>
+
+
+
+            <div class="lef center">
+
+                <div class="bassi">
+                    <p>BASIC</p>
+                    <p>$47 / year</p>
+                    <ul>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Officia quaerat eaque neque</li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Possimus aut consequuntur incidunt
+                        </li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Lorem ipsum dolor sit amet</li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Consectetur adipisicing elit</li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Dolorum esse odio quas architecto
+                            sint
+                        </li>
+                    </ul>
+                    <p>Buy now</p>
+                </div>
+
+
+            </div>
+
+
+            <div class="lef right">
+
+                <div class="bassi">
+                    <p>BASIC</p>
+                    <p>$47 / year</p>
+                    <ul>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Officia quaerat eaque neque</li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Possimus aut consequuntur incidunt
+                        </li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Lorem ipsum dolor sit amet</li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Consectetur adipisicing elit</li>
+                        <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Dolorum esse odio quas architecto
+                            sint
+                        </li>
+                    </ul>
+                    <p>Buy now</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 
 </body>
 
