--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="lef left">
                 <div class="bassi">
                     <p>BASIC</p>
-                    <p>$47 / year</p>
+                    <p>$47 / <span>year</span></p>
                     <ul>
                         <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Officia quaerat eaque neque</li>
                         <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Possimus aut consequuntur incidunt
@@ -237,8 +237,8 @@
             <div class="lef center">
 
                 <div class="bassi">
-                    <p>BASIC</p>
-                    <p>$47 / year</p>
+                    <p>PREMIUM</p>
+                    <p>$250 / <span>year</span></p>
                     <ul>
                         <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Officia quaerat eaque neque</li>
                         <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Possimus aut consequuntur incidunt
@@ -259,8 +259,8 @@
             <div class="lef right">
 
                 <div class="bassi">
-                    <p>BASIC</p>
-                    <p>$47 / year</p>
+                    <p>PROFESSIONAL</p>
+                    <p>$850 / <span>year</span></p>
                     <ul>
                         <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Officia quaerat eaque neque</li>
                         <li><span><i class="fa-solid fa-check"></i></span>&nbsp;&nbsp;Possimus aut consequuntur incidunt
@@ -278,6 +278,55 @@
 
     </div>
 
+    <!-- FREQUENTLY -->
+
+    <div class="pricing">
+        <div class="table">
+
+            <p class="pow"><i class="fa-solid fa-paw"></i>&nbsp;<span><i class="fa-solid fa-paw"></i></span>&nbsp;<i
+                    class="fa-solid fa-paw"></i>
+            </p>
+            <p>FREQUENTLY ASK QUESTIONS</p>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
+                blind texts.</p>
+        </div>
+    </div>
+
+
+
+
+
+
+    <!-- PHOTO GALLERY -->
+    <div class="pricing">
+        <div class="table">
+
+            <p class="pow"><i class="fa-solid fa-paw"></i>&nbsp;<span><i class="fa-solid fa-paw"></i></span>&nbsp;<i
+                    class="fa-solid fa-paw"></i>
+            </p>
+
+            <p style="font-size:3em;color: black;">PHOTO GALLERY</p>
+        </div>
+    </div>
+
+    <div class="photo">
+        <div class="gallery">
+            <div class="photos">
+
+            </div>
+            <div class="photos"></div>
+            <div class="photos"></div>
+            <div class="photos"></div>
+            <div class="photos"></div>
+            <div class="photos"></div>
+            <div class="photos"></div>
+            <div class="photos"></div>
+            <div class="photos"></div>
+            <div class="photos"></div>
+            <div class="photos"></div>
+            <div class="photos"></div>
+        </div>
+    </div>
 
 </body>
 
