--- a/index.html
+++ b/index.html
@@ -33,9 +33,24 @@
             <div class="hh service">Service</div>
             <div class="hh contact">Contact</div>
         </div>
-        <div class="menu"><span><i class="fa-solid fa-bars"></i></span></div>
+        <div id="menu"><span id="openn"><i class="fa-solid fa-bars"></i></span></div>
 
+        <div id="navigation">
+            <div id="navcontent">
+                <p>Home</p>
+                <p>About</p>
+
+                <p>Trainers</p>
+                <p>Services</p>
+                <p>Contact</p>
+
+                </ul>
+            </div>
+            <div id="navclose"><span id="closee"><i class="fa-solid fa-xmark"></i></span></div>
+
+        </div>
     </div>
+
 
 
     <!-- border -->
@@ -292,6 +307,58 @@
         </div>
     </div>
 
+    <div class="should">
+        <div class="box">
+            <div class="twoo">
+                <div class="four should1">
+                    <p id="p1"><span id="down1"><i class="fa-solid fa-paw"></i></span>&nbsp;&nbsp;Should I stop letting
+                        my dog
+                        sleep with me at night?
+                    </p>
+                    <p id="p2">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                        there live the blind texts.
+                        Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
+                        ocean.</p>
+                </div>
+                <div class="four should2">
+                    <p id="p11"><span id="down2"><i class="fa-solid fa-paw"></i></span>&nbsp;Is it okay to dress up your
+                        dog?</p>
+                    <p id="p22">A small river named Duden flows by their place and supplies it with the necessary
+                        regelialia. It is a paradisematic
+                        country, in which roasted parts of sentences fly into your mouth.</p>
+                </div>
+
+
+                <div class="four should3">
+                    <p id="p111"><span id="down3"><i class="fa-solid fa-paw"></i></span>&nbsp;Why do dogs like belly
+                        rubs so much
+                    </p>
+                    <p id="p222">Even the all-powerful Pointing has no control about the blind texts it is an almost
+                        unorthographic life One day however
+                        a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of
+                        Grammar.</p>
+                </div>
+
+
+                <div class="four should4">
+                    <p id="p1111"><span id="down4"><i class="fa-solid fa-paw"></i></span>&nbsp;Is a warm dry nose a sign
+                        of illness
+                        in dogs?</p>
+                    <p id="p2222">The Big Oxmox advised her not to do so, because there were thousands of bad Commas,
+                        wild Question Marks and devious
+                        Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her
+                        initial into the belt and made
+                        herself on the way.</p>
+
+                </div>
+            </div>
+            <div class="twoo">
+                <div class="bordee"></div>
+            </div>
+
+        </div>
+    </div>
+
 
 
 
@@ -328,6 +395,7 @@
         </div>
     </div>
 
+    <script src="./navigation.js"></script>
 </body>
 
 </html>
