--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Dogger</title>
     <link rel="stylesheet" href="./dogger.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <script src="./navigation.js" defer></script>
+    <script src="./happycustomer.js" defer></script>
 </head>
 
 <body>
@@ -365,6 +367,87 @@
 
 
 
+
+
+
+    <!-- happy customers -->
+
+    <div class="happy">
+        <div class="border-top">
+            <p class="pow"><span><i class="fa-solid fa-paw"></i></span>&nbsp;<i
+                    class="fa-solid fa-paw"></i>&nbsp;<span><i class="fa-solid fa-paw"></i></span>
+            </p>
+            <p>HAPPY CUSTOMERS</p>
+        </div>
+
+
+        <div class="border-center">
+            <div id="bordercenter">
+                <div class="box">
+                    <div class="robert1">The Big Oxmox advised her not to do so, because there were thousands of bad
+                        Commas,
+                        wild Question Marks and devious
+                        Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her".
+                    </div>
+                    <div class="robert2"></div>
+                    <div class="robert3">Robert Steward</div>
+                </div>
+                <div class="box">
+                    <div class="ricky1">The Big Oxmox advised her not to do so, because there were thousands of bad
+                        Commas,
+                        wild Question Marks and devious
+                        Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her".
+                    </div>
+                    <div class="ricky2"></div>
+                    <div class="ricky3">Ricky Fisher</div>
+                </div>
+                <div class="box">
+                    <div class="ken1">The Big Oxmox advised her not to do so, because there were thousands of bad
+                        Commas,
+                        wild Question Marks and devious
+                        Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her".
+                    </div>
+                    <div class="ken2"></div>
+                    <div class="ken3">Ken Davis</div>
+                </div>
+                <div class="box">
+                    <div class="mellisa1">The Big Oxmox advised her not to do so, because there were thousands of bad
+                        Commas,
+                        wild Question Marks and devious
+                        Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her".
+                    </div>
+                    <div class="mellisa2"></div>
+                    <div class="mellisa3">Mellisa Griffin</div>
+                </div>
+                <div class="box">
+                    <div class="Steward1">The Big Oxmox advised her not to do so, because there were thousands of bad
+                        Commas,
+                        wild Question Marks and devious
+                        Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her".
+                    </div>
+                    <div class="Steward2"></div>
+                    <div class="Steward3">Robert Steward</div>
+                </div>
+
+
+
+
+
+
+            </div>
+        </div>
+
+
+        <div class="border-bottom">
+            <span id="leftarrow"><i class="fa-solid fa-arrow-left-long"></i></span><span id="rightarrow"><i
+                    class="fa-solid fa-arrow-right"></i></span>
+        </div>
+
+    </div>
+
+
+
+
     <!-- PHOTO GALLERY -->
     <div class="pricing">
         <div class="table">
@@ -396,7 +479,6 @@
         </div>
     </div>
 
-    <script src="./navigation.js"></script>
 </body>
 
 </html>
