--- a/index.html
+++ b/index.html
@@ -479,6 +479,96 @@
         </div>
     </div>
 
+    <!-- dogger blog -->
+
+    <div class="dogger">
+        <div class="blog">
+            <p class="pow"><i class="fa-solid fa-paw"></i>&nbsp;<span><i class="fa-solid fa-paw"></i></span>&nbsp;<i
+                    class="fa-solid fa-paw"></i>
+            </p>
+            <p>DOGGER BLOG</p>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
+                blind
+                texts.</p>
+        </div>
+    </div>
+
+
+    <!-- five things -->
+
+    <div class="fivething">
+
+        <div class="things">
+            <div class="dogs">
+                <div class="dog1-img"></div>
+                <div class="dog1">
+                    <div class="div1">
+                        <p>5 Things You Need To Know About Dog Massage</p>
+                        <p>April 17, 2019</p>
+                    </div>
+                    <div class="div2">
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                            there live the blind texts.</p>
+                        <p><a href="#">Read More..</a></p>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <div class="dogs">
+                <div class="dog1-img" id="dog2-img"></div>
+                <div class="dog1">
+                    <div class="div1">
+                        <p>5 Things You Need To Know About Dog Massage</p>
+                        <p>April 17, 2019</p>
+                    </div>
+                    <div class="div2">
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                            there live the blind texts.</p>
+                        <p><a href="#">Read More..</a></p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="dogs">
+                <div class="dog1-img" id="dog3-img"></div>
+                <div class="dog1">
+
+                    <div class="div1">
+                        <p>5 Things You Need To Know About Dog Massage</p>
+                        <p>April 17, 2019</p>
+                    </div>
+                    <div class="div2">
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                            there live the blind texts.</p>
+                        <p><a href="#">Read More..</a></p>
+                    </div>
+
+
+                </div>
+            </div>
+
+            <div class="dogs">
+                <div class="dog1-img"></div>
+                <div class="dog1">
+
+                    <div class="div1">
+                        <p>5 Things You Need To Know About Dog Massage</p>
+                        <p>April 17, 2019</p>
+                    </div>
+                    <div class="div2">
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                            there live the blind texts.</p>
+                        <p><a href="#">Read More..</a></p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
