--- a/index.html
+++ b/index.html
@@ -569,6 +569,86 @@
         </div>
     </div>
 
+
+    <!-- our services -->
+
+    <div class="dogger">
+        <div class="blog">
+            <p class="pow"><i class="fa-solid fa-paw"></i>&nbsp;<span><i class="fa-solid fa-paw"></i></span>&nbsp;<i
+                    class="fa-solid fa-paw"></i>
+            </p>
+            <p>OUR SERVICES</p>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
+                blind texts.</p>
+
+        </div>
+
+    </div>
+
+
+    <!-- checkup -->
+
+    <div class="checkup">
+
+        <div class="check-up">
+            <div class="checkk">
+                <div class="chk"></div>
+                <div id="chkk">Dog Checkup</div>
+                <div id="chk">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                    there live
+                    the blind texts.</div>
+            </div>
+            <div class="checkk">
+
+                <div class="chk" id="chk2"></div>
+                <div id="chkk">Dog Dermatology</div>
+                <div id="chk">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                    there live
+                    the blind texts.</div>
+
+            </div>
+            <div class="checkk">
+
+                <div class="chk" id="chk3"></div>
+                <div id="chkk">For Strong Teeth</div>
+                <div id="chk">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                    there live
+                    the blind texts.</div>
+
+            </div>
+            <div class="checkk">
+                <div class="chk" id="chk4"></div>
+                <div id="chkk">Dog First Aid</div>
+                <div id="chk">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                    there live
+                    the blind texts.</div>
+
+            </div>
+            <div class="checkk">
+
+                <div class="chk" id="chk5"></div>
+                <div id="chkk">Dog Dryer</div>
+                <div id="chk">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                    there live
+                    the blind texts.</div>
+
+            </div>
+            <div class="checkk">
+
+                <div class="chk" id="chk6"></div>
+                <div id="chkk">Expert Veterinarian</div>
+                <div id="chk">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                    there live
+                    the blind texts.</div>
+
+            </div>
+
+
+        </div>
+
+    </div>
+
+
 </body>
 
 </html>
