--- a/index.html
+++ b/index.html
@@ -649,6 +649,76 @@
     </div>
 
 
+    <!-- contact Form -->
+
+    <div class="contactform">
+        <div id="form">
+            <div class="leftForm">
+                <div class="contt">
+                    <div class="contt1 contactt">Contact Form</div>
+                    <div class="contt2 contactt">
+                        <div class="first-name">
+                            <span>First Name</span>
+                            <span><input type="text"></span>
+                        </div>
+                        <div class="last-name">
+                            <span>Last Name</span>
+                            <span><input type="text"></span>
+                        </div>
+                    </div>
+                    <div class="contt3 contactt">
+                        <span>Email</span>
+                        <span id="inn"><input type="email"></span>
+                    </div>
+                    <div class="contt4 contactt">
+                        <span>Subject</span>
+                        <span><input type="text"></span>
+                    </div>
+                    <div class="contt5 contactt">
+
+                        <span>Message</span>
+                        <span><input type="text" placeholder="Write your notes or questions here..."></span>
+                    </div>
+                    <div class="contt6 contactt">
+                        <div class="send">
+                            Send Message
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="rightForm">
+                <div class="contact1">
+                    <div class="cont-pow">
+                        <p><span><i class="fa-solid fa-paw"></i></span><span id="powon"><i
+                                    class="fa-solid fa-paw"></i></span><span><i class="fa-solid fa-paw"></i></span></p>
+                        <p id="cons">CONTACT US</p>
+                    </div>
+                </div>
+                <div class="contact2">
+                    <div class="address1">Address</div>
+                    <div class="address2">Melbourne St,South</div>
+                    <div class="address3">Birbane 4101 Austraila</div>
+                </div>
+                <div class="contact3">
+                    <div class="phone1">Phone:</div>
+                    <div class="phone2">+(000) 123 4567 89</div>
+                </div>
+                <div class="contact4">
+                    <div class="email1">Email:</div>
+                    <div class="email2">info@yourdomain.com</div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+
 </body>
 
 </html>
