--- a/index.html
+++ b/index.html
@@ -717,7 +717,59 @@
 
 
 
+    <!-- last page -->
 
+    <div class="lastt">
+        <div class="last last1">
+            <div class="ipsum1">About Us</div>
+            <div class="ipsum2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam
+                voluptatum autem. Amet aliquid
+                nesciunt veritatis aliquam.</div>
+        </div>
+
+
+        <div class="last last2">
+            <div class="ql1">Quick Links</div>
+            <div class="ql2">
+                <p><a href="#">About Us</a></p>
+                <p><a href="#">Trainers</a></p>
+                <p><a href="#">Services</a></p>
+                <p><a href="#">Testimonials</a></p>
+                <p><a href="#">Contact Us</a></p>
+            </div>
+        </div>
+
+
+        <div class="last last3">
+            <div class="fu1">Follow Us</div>
+            <div class="fu2">
+                <span><i class="fa-brands fa-facebook-f"></i></span>
+                <span><i class="fa-brands fa-twitter"></i></span>
+                <span><i class="fa-brands fa-instagram"></i></span>
+            </div>
+            <div class="fu3">
+                <span>in</span>
+            </div>
+        </div>
+
+        <div class="last last4">
+            <div class="sn1">Subscribe Newsletter</div>
+            <div class="sn2">
+                <div class="div1">
+                    <input type="email" placeholder="Enter Email">
+                </div>
+                <div class="div2">Send</div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div class="lastline">
+        <div class="lline">Copyright ©2022 All rights reserved | This template is made with <span><i
+                    class="fa-solid fa-heart"></i></span> by Colorlib</div>
+
+    </div>
 
 </body>
 
