--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Dogger</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="./dogger.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <script src="./navigation.js" defer></script>
@@ -73,7 +75,8 @@
 
     <!-- welcome -->
 
-    <div class="welcome">
+    <div data-aos="fade-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
+        data-aos-easing="ease-in-out" class="welcome">
         <div class="well">
             <div class="paw"><span class="left-paw"><i class="fa-solid fa-paw"></i></span>&nbsp;<i
                     class="fa-solid fa-paw"></i>&nbsp;<span class="right-paw"><i class="fa-solid fa-paw"></i></span>
@@ -89,7 +92,8 @@
 
     <div class="love">
         <div class="love-border">
-            <div class="ll love-care">
+            <div data-aos="fade-left" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
+                data-aos-easing="ease-in-out" class="ll love-care">
                 <div class="care">Love & Care</div>
                 <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
                     right at the coast of the Semantics, a
@@ -97,28 +101,33 @@
                 <div class="readme">Read More</div>
 
             </div>
-            <div class="ll nurse-doctor">
+            <div data-aos="fade-right" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
+                data-aos-easing="ease-in-out" class="ll nurse-doctor">
                 <div class="nurse-img"></div>
 
             </div>
-            <div class="ll fearsome-dog">
+            <div data-aos="fade-left" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
+                data-aos-easing="ease-in-out" class="ll fearsome-dog">
                 <div class="fear-dog-img"></div>
             </div>
-            <div class="ll fearsome">
+            <div data-aos="fade-right" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
+                data-aos-easing="ease-in-out" class="ll fearsome">
                 <div class="care">Fearsome</div>
                 <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
                     right at the coast of the Semantics, a
                     large language ocean.</div>
                 <div class="readme">Read More</div>
             </div>
-            <div class="ll beautiful">
+            <div data-aos="fade-left" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
+                data-aos-easing="ease-in-out" class="ll beautiful">
                 <div class="care">Beautiful</div>
                 <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
                     right at the coast of the Semantics, a
                     large language ocean.</div>
                 <div class="readme">Read More</div>
             </div>
-            <div class="ll beautiful-dog">
+            <div data-aos="fade-right" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
+                data-aos-easing="ease-in-out" class="ll beautiful-dog">
                 <div class="beautiful-dog-img"></div>
             </div>
 
@@ -131,7 +140,8 @@
     <!-- about us -->
 
     <div class="about-us">
-        <div class="aboutt us">
+        <div data-aos="slide-right" data-aos-offset=" 200" data-aos-delay="50" data-aos-duration="1000"
+            data-aos-easing="ease-in-out" class="aboutt us">
             <div class="uss">
                 <div class="pow"><i class="fa-solid fa-paw"></i>&nbsp;<span><i
                             class="fa-solid fa-paw"></i></span>&nbsp;<i class="fa-solid fa-paw"></i>
@@ -151,7 +161,8 @@
                 </div>
             </div>
         </div>
-        <div class="aboutt dog-vide">
+        <div data-aos="slide-left" data-aos-offset=" 200" data-aos-delay="50" data-aos-duration="1000"
+            data-aos-easing="ease-in-out" class="aboutt dog-vide">
             <div class="dogg-video"></div>
         </div>
 
@@ -177,7 +188,8 @@
 
     <div class="jesi">
         <div class="pictures">
-            <div class="pics">
+            <div data-aos="flip-right" data-aos-offset="200" data-aos-delay="20" data-aos-duration="2000"
+                data-aos-easing="ease-in-out" class="pics">
                 <div class="img"></div>
                 <div class="jesica">
                     <p>Jessica White</p>
@@ -188,7 +200,8 @@
                                 class="fa-brands fa-facebook-f"></i></span></p>
                 </div>
             </div>
-            <div class="pics">
+            <div data-aos="flip-right" data-aos-offset="200" data-aos-delay="40" data-aos-duration="2000"
+                data-aos-easing="ease-in-out" class="pics">
                 <div class="img"></div>
                 <div class="jesica">
                     <p>Valerie Elash</p>
@@ -199,7 +212,8 @@
                                 class="fa-brands fa-facebook-f"></i></span></p>
                 </div>
             </div>
-            <div class="pics">
+            <div data-aos="flip-right" data-aos-offset="200" data-aos-delay="60" data-aos-duration="2000"
+                data-aos-easing="ease-in-out" class="pics">
                 <div class="img"></div>
                 <div class="jesica">
                     <p>Alicia Jones</p>
@@ -232,7 +246,7 @@
 
     <div class="basic">
         <div class="basicc">
-            <div class="lef left">
+            <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="lef left">
                 <div class="bassi">
                     <p>BASIC</p>
                     <p>$47 / <span>year</span></p>
@@ -252,7 +266,7 @@
 
 
 
-            <div class="lef center">
+            <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" class="lef center">
 
                 <div class="bassi">
                     <p>PREMIUM</p>
@@ -274,7 +288,7 @@
             </div>
 
 
-            <div class="lef right">
+            <div data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="lef right">
 
                 <div class="bassi">
                     <p>PROFESSIONAL</p>
@@ -720,48 +734,56 @@
     <!-- last page -->
 
     <div class="lastt">
-        <div class="last last1">
-            <div class="ipsum1">About Us</div>
-            <div class="ipsum2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam
-                voluptatum autem. Amet aliquid
-                nesciunt veritatis aliquam.</div>
-        </div>
 
+        <div class="darkkkk">
 
-        <div class="last last2">
-            <div class="ql1">Quick Links</div>
-            <div class="ql2">
-                <p><a href="#">About Us</a></p>
-                <p><a href="#">Trainers</a></p>
-                <p><a href="#">Services</a></p>
-                <p><a href="#">Testimonials</a></p>
-                <p><a href="#">Contact Us</a></p>
+            <div class="last last1">
+                <div class="ipsum1">About Us</div>
+                <div class="ipsum2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium
+                    magnam
+                    voluptatum autem. Amet aliquid
+                    nesciunt veritatis aliquam.</div>
             </div>
-        </div>
 
 
-        <div class="last last3">
-            <div class="fu1">Follow Us</div>
-            <div class="fu2">
-                <span><i class="fa-brands fa-facebook-f"></i></span>
-                <span><i class="fa-brands fa-twitter"></i></span>
-                <span><i class="fa-brands fa-instagram"></i></span>
-            </div>
-            <div class="fu3">
-                <span>in</span>
-            </div>
-        </div>
-
-        <div class="last last4">
-            <div class="sn1">Subscribe Newsletter</div>
-            <div class="sn2">
-                <div class="div1">
-                    <input type="email" placeholder="Enter Email">
+            <div class="last last2">
+                <div class="ql1">Quick Links</div>
+                <div class="ql2">
+                    <p><a href="#">About Us</a></p>
+                    <p><a href="#">Trainers</a></p>
+                    <p><a href="#">Services</a></p>
+                    <p><a href="#">Testimonials</a></p>
+                    <p><a href="#">Contact Us</a></p>
                 </div>
-                <div class="div2">Send</div>
+            </div>
+
+
+            <div class="last last3">
+                <div class="fu1">Follow Us</div>
+                <div class="fu2">
+                    <span><i class="fa-brands fa-facebook-f"></i></span>
+                    <span><i class="fa-brands fa-twitter"></i></span>
+                    <span><i class="fa-brands fa-instagram"></i></span>
+                </div>
+                <div class="fu3">
+                    <span>in</span>
+                </div>
+            </div>
+
+            <div class="last last4">
+                <div class="sn1">Subscribe Newsletter</div>
+                <div class="sn2">
+                    <div class="div1">
+                        <input type="email" placeholder="Enter Email">
+                    </div>
+                    <div class="div2">Send</div>
+                </div>
+
             </div>
 
         </div>
+
+
     </div>
 
 
