--- a/index.html
+++ b/index.html
@@ -668,37 +668,51 @@
     <div class="contactform">
         <div id="form">
             <div class="leftForm">
-                <div class="contt">
-                    <div class="contt1 contactt">Contact Form</div>
-                    <div class="contt2 contactt">
-                        <div class="first-name">
-                            <span>First Name</span>
-                            <span><input type="text"></span>
-                        </div>
-                        <div class="last-name">
-                            <span>Last Name</span>
-                            <span><input type="text"></span>
-                        </div>
-                    </div>
-                    <div class="contt3 contactt">
-                        <span>Email</span>
-                        <span id="inn"><input type="email"></span>
-                    </div>
-                    <div class="contt4 contactt">
-                        <span>Subject</span>
-                        <span><input type="text"></span>
-                    </div>
-                    <div class="contt5 contactt">
 
-                        <span>Message</span>
-                        <span><input type="text" placeholder="Write your notes or questions here..."></span>
+                <div class="contt1 fistform">
+                    Contact Form
+                </div>
+                <div class="contt1 secform">
+                    <div class="secform-left">
+                        <p>First&nbsp;Name</p>
+                        <input type="text" id="firstname">
                     </div>
-                    <div class="contt6 contactt">
-                        <div class="send">
-                            Send Message
-                        </div>
+                    <div class="secform-right">
+                        <p>Last&nbsp;Name</p>
+                        <input type="text" id="lastname">
+                    </div>
+
+                </div>
+                <div class="contt1 thirdform">
+                    <div class="ttff">
+                        <p>Email</p>
+                        <input type="email" id="email">
                     </div>
                 </div>
+
+
+                <div class="contt1 fourthform">
+                    <div class="forformbor">
+                        <p>Subject</p>
+                        <input type="text" id="subject">
+                    </div>
+
+                </div>
+
+                <div class="contt1 fivethform">
+                    <div class="fiveforbor">
+                        <p>Message</p>
+                        <textarea id="txtarea" placeholder="Write your notes or questions here..."></textarea>
+
+                    </div>
+
+                </div>
+                <div class="contt1 sixthform">
+                    <div class="send-ms-bor">Send&nbsp;Message</div>
+                </div>
+
+
+
             </div>
 
 
