--- a/index.html
+++ b/index.html
@@ -22,15 +22,20 @@
             <label class="hh about" for="on">About&nbsp;<i class="fa-solid fa-angle-down"></i>
 
                 <div class="trade">
-                    <ul>
-                        <li>Trainers</li>
-                        <li>Pricing</li>
-                        <li>FQA</li>
-                        <li>Testimonals</li>
-                        <li>Gallery</li>
-                        <li>Blog</li>
-                        <li>More links</li>
-                    </ul>
+
+                    <div>Trainers</div>
+                    <div>Pricing</div>
+                    <div>FQA</div>
+                    <div>Testimonals</div>
+                    <div>Gallery</div>
+                    <div>Blog</div>
+                    <div id="moredis">More links&nbsp;&nbsp;&nbsp;<span><i class="fa-solid fa-greater-than"></i></span>
+                    </div>
+                    <div class="div-rig-bor">
+                        <p>Menu One</p>
+                        <p>Menu Two</p>
+                        <p>Menu Three</p>
+                    </div>
                 </div>
             </label>
             <div class="hh trainer">Trainers</div>
@@ -92,8 +97,7 @@
 
     <div class="love">
         <div class="love-border">
-            <div data-aos="fade-left" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
-                data-aos-easing="ease-in-out" class="ll love-care">
+            <div class="ll love-care">
                 <div class="care">Love & Care</div>
                 <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
                     right at the coast of the Semantics, a
@@ -101,33 +105,28 @@
                 <div class="readme">Read More</div>
 
             </div>
-            <div data-aos="fade-right" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
-                data-aos-easing="ease-in-out" class="ll nurse-doctor">
+            <div class="ll nurse-doctor">
                 <div class="nurse-img"></div>
 
             </div>
-            <div data-aos="fade-left" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
-                data-aos-easing="ease-in-out" class="ll fearsome-dog">
+            <div class="ll fearsome-dog">
                 <div class="fear-dog-img"></div>
             </div>
-            <div data-aos="fade-right" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
-                data-aos-easing="ease-in-out" class="ll fearsome">
+            <div class="ll fearsome">
                 <div class="care">Fearsome</div>
                 <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
                     right at the coast of the Semantics, a
                     large language ocean.</div>
                 <div class="readme">Read More</div>
             </div>
-            <div data-aos="fade-left" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
-                data-aos-easing="ease-in-out" class="ll beautiful">
+            <div class="ll beautiful">
                 <div class="care">Beautiful</div>
                 <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
                     right at the coast of the Semantics, a
                     large language ocean.</div>
                 <div class="readme">Read More</div>
             </div>
-            <div data-aos="fade-right" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
-                data-aos-easing="ease-in-out" class="ll beautiful-dog">
+            <div class="ll beautiful-dog">
                 <div class="beautiful-dog-img"></div>
             </div>
 
@@ -140,8 +139,7 @@
     <!-- about us -->
 
     <div class="about-us">
-        <div data-aos="slide-right" data-aos-offset=" 200" data-aos-delay="50" data-aos-duration="1000"
-            data-aos-easing="ease-in-out" class="aboutt us">
+        <div class="aboutt us">
             <div class="uss">
                 <div class="pow"><i class="fa-solid fa-paw"></i>&nbsp;<span><i
                             class="fa-solid fa-paw"></i></span>&nbsp;<i class="fa-solid fa-paw"></i>
@@ -161,8 +159,7 @@
                 </div>
             </div>
         </div>
-        <div data-aos="slide-left" data-aos-offset=" 200" data-aos-delay="50" data-aos-duration="1000"
-            data-aos-easing="ease-in-out" class="aboutt dog-vide">
+        <div class="aboutt dog-vide">
             <div class="dogg-video"></div>
         </div>
 
@@ -702,7 +699,8 @@
                 <div class="contt1 fivethform">
                     <div class="fiveforbor">
                         <p>Message</p>
-                        <textarea id="txtarea" placeholder="Write your notes or questions here..."></textarea>
+                        <textarea id="txtarea" minlength="10" rows="5" cols="40"
+                            placeholder="Write your notes or questions here..."></textarea>
 
                     </div>
 
