--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
     <div class="love">
         <div class="love-border">
-            <div class="ll love-care">
+            <div data-aos="zoom-in-up" data-aos-delay="50" data-aos-duration="1000" data-aos-easing="ease-in-out"
+                class="ll love-care">
                 <div class="care">Love & Care</div>
                 <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
                     right at the coast of the Semantics, a
@@ -105,28 +106,33 @@
                 <div class="readme">Read More</div>
 
             </div>
-            <div class="ll nurse-doctor">
+            <div data-aos="zoom-in-up" data-aos-delay="50" data-aos-duration="1000" data-aos-easing="ease-in-out"
+                class="ll nurse-doctor">
                 <div class="nurse-img"></div>
 
             </div>
-            <div class="ll fearsome-dog">
+            <div data-aos="zoom-in-down" data-aos-delay="50" data-aos-duration="1000" data-aos-easing="ease-in-out"
+                class="ll fearsome-dog">
                 <div class="fear-dog-img"></div>
             </div>
-            <div class="ll fearsome">
+            <div data-aos="zoom-in-down" data-aos-delay="50" data-aos-duration="1000" data-aos-easing="ease-in-out"
+                class="ll fearsome">
                 <div class="care">Fearsome</div>
                 <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
                     right at the coast of the Semantics, a
                     large language ocean.</div>
                 <div class="readme">Read More</div>
             </div>
-            <div class="ll beautiful">
+            <div data-aos="zoom-out" data-aos-delay="50" data-aos-duration="1000" data-aos-easing="ease-in-out"
+                class="ll beautiful">
                 <div class="care">Beautiful</div>
                 <div class="Far-far">Far far away, behind the word mountains, Separated they live in Bookmarksgrove
                     right at the coast of the Semantics, a
                     large language ocean.</div>
                 <div class="readme">Read More</div>
             </div>
-            <div class="ll beautiful-dog">
+            <div data-aos="zoom-out" data-aos-delay="50" data-aos-duration="1000" data-aos-easing="ease-in-out"
+                class="ll beautiful-dog">
                 <div class="beautiful-dog-img"></div>
             </div>
 
