--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <script src="./navigation.js" defer></script>
     <script src="./happycustomer.js" defer></script>
+    <script src="./photo.js" defer></script>
 </head>
 
 <body>
@@ -479,20 +480,21 @@
 
     <div class="photo">
         <div class="gallery">
-            <div class="photos">
-
-            </div>
-            <div class="photos"></div>
-            <div class="photos"></div>
-            <div class="photos"></div>
-            <div class="photos"></div>
-            <div class="photos"></div>
-            <div class="photos"></div>
-            <div class="photos"></div>
-            <div class="photos"></div>
-            <div class="photos"></div>
-            <div class="photos"></div>
-            <div class="photos"></div>
+            <div class="photos" id="p1"></div>
+            <div class="photos" id="p2"></div>
+            <div class="photos" id="p3"></div>
+            <div class="photos" id="p4"></div>
+            <div class="photos" id="p5"></div>
+            <div class="photos" id="p6"></div>
+            <div class="photos" id="p1"></div>
+            <div class="photos" id="p2"></div>
+            <div class="photos" id="p3"></div>
+            <div class="photos" id="p4"></div>
+            <div class="photos" id="p5"></div>
+            <div class="photos" id="p6"></div>
+        </div>
+        <div class="big-box">
+            <div class="closeee">X</div>
         </div>
     </div>
 
